# LazyDeveloperHelper

./: .awesome-lint.json  .deepsource.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  LICENSE.txt  LazyDeveloperHelper  PLUGIN_HISTORY.md  README.md  SECURITY.md  STATUS.md  TODO.md  commands.lua  commit_generation.py  contributing.md  init.lua  package-lock.json  package.json  release.sh  test.py  test.rs
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: lua_issue.md  python_issue.md
.github/workflows/: changelog.yml  release.yml
LazyDeveloperHelper/plugin/: commands.lua
LazyDeveloperHelper/python/: logger_config.py
commands/: general.lua  install.lua  install_requirements.lua
docs/: STATUS.md  TODO.md  index.md
lua/: init.lua
lua/LazyDeveloperHelper/: commands.lua  init.lua
lua/LazyDeveloperHelper/python/python_installers/test_of_poetry/just_for_test/: pyproject.toml
plugin/: commands.lua  lazydev.lua  lazydevhelp.lua
python/: autocomplete.py  cargo_install.py  luarocks_install.py  npm_install.py  pip_check.py  pip_install.py  pip_install:q.py  ruby_gem_install.py
python/c_installers/: conan_install.py
python/requirements_installers/: cargo_req_installer.py  pip_req_installer.py
sh_scripts/: github_release.sh  release.sh  vim_org_release.sh
test_files/: conanfile.txt  test.lua  test.py
tests/: conftest.py  test_cargo_install.py  test_luarocks_install.py  test_npm_install.py  test_pip_install.py
tools/: prompt_for_changelog.txt
(+32 files in other folders)
